tests/negative/disallowed_spawn.def
// Negative unit test for a disallowed spawn.

decl bar (i32) -> void;

decl baz () -> i32;

def foo () -> void
begin
    bar(spawn baz());
end
